fixed layout issues with landing page card

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -8,6 +8,9 @@ body {
   margin: 0;
   font-family: var(--fontFamily1);
   scroll-behavior: smooth;
+  line-height: 23px;
+  letter-spacing: 0.7px;
+  color: #170527dd;
 }
 
 * {
